--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,13 +27,14 @@ services:
     links:
       - mysql
       - redis
-    ports:
-      - "8080:8080"
+    # ports:
+    #   - "8080:8080"
     expose:
-      - "80:8080"
+      - "80"
     environment:
       - VIRTUAL_HOST=ezride.apps.com.pe,www.ezride.apps.com.pe
       - LETSENCRYPT_HOST=ezride.apps.com.pe,www.ezride.apps.com.pe
+      - VIRTUAL_PORT=8080
       - LETSENCRYPT_EMAIL=miguekos1233@gmail.com
 
 volumes:
