--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,32 +1,32 @@
-version: "3"
+ version: '3'
 
-services:
-  mysql:
-    image: mysql
-    command: --default-authentication-plugin=mysql_native_password
-    volumes:
-      - mysqlvol:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: defaultpassword
+ services:
+   mysql:
+     image: mysql
+     command: --default-authentication-plugin=mysql_native_password
+     volumes:
+       - mysqlvol:/var/lib/mysql
+     environment:
+       MYSQL_ROOT_PASSWORD: defaultpassword
 
-  redis:
-    image: redis
-    volumes:
-      - redisvol:/data
+   redis:
+     image: redis
+     volumes:
+       - redisvol:/data
 
-  taxi:
-    image: ridyio/taxi
-    restart: always
-    depends_on:
-      - "redis"
-      - "mysql"
-    volumes:
-      - ./img:/app/public/img
-      - ./config:/app/config
-      - taxiassets:/app/public/assets
-    links:
-      - mysql
-      - redis
+   taxi:
+     image: ridyio/taxi
+     restart: always
+     depends_on:
+       - "redis"
+       - "mysql"
+     volumes:
+       - ./img:/app/public/img
+       - ./config:/app/config
+       - taxiassets:/app/public/assets
+     links:
+       - mysql
+       - redis
     # ports:
     #   - "8080:8080"
     expose:
@@ -37,10 +37,10 @@ services:
       - VIRTUAL_PORT=8080
       - LETSENCRYPT_EMAIL=miguekos1233@gmail.com
 
-volumes:
-  redisvol:
-  mysqlvol:
-  taxiassets:
+ volumes:
+    redisvol:
+    mysqlvol:
+    taxiassets:
 
 networks:
   default:
